--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/sanctum": "^2.15",
+        "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
